Changelog
=========

3.4 (unreleased)
----------------

- Added new mail event `AttachmentsDeleted`.
  [lgraf]

- Improved wording of German translations in extract attachments view.
  [lgraf]

- Disable the editable border for the extract attachments view.
  [lgraf]

- Fix UnicodeError in resolving mail author.
  [lgraf]

- Make FileOrPaperValidator consider mails properly (always digitally available).
  [lgraf]

- Override ftw.mail default view with our customized dexterity default view.
  [lgraf]

- Add 'Edit Metadata' action to ftw.mail.mail FTI.
  [lgraf]

- Change mail tabbed view to register tabs with old-style FTI actions
  instead of custom TabbedView class.
  [lgraf]

- Add plone.app.lockingbehavior to ftw.mail.mail FTI.
  [lgraf]

- Hide duplicate mail title in mail preview tab.
  [lgraf]

- Customized document default view in order to render `file`
  field in NO_DOWNLOAD_DISPLAY_MODE.
  [lgraf]

- Omit `public_trial` and `public_trial_statement` fields from dossier and
  repository folder default views.
  [lgraf]

- Removed previously customized default view for business case dossiers. The
  default view is now customized for all folderish types.
  [lgraf]

- Customize plone.dexterity default view for all dexterity content in
  order to be able to omit specific fields.
  [lgraf]

- Remove `public_trial` from repository byline.
  [lgraf]

- Journalize any changes to `public_trial` field.
  [lgraf]

- Journal: Listen on IBaseDocument instead of IDocumentSchema - mails are now also
  considered documentish and should be treated equally.
  [lgraf]

- Don't show public trial edit form for template dossiers.
  [lgraf]

- Reword German translations for public_trial_statement label and description:
  New label: Bearbeitungsinformation
  New description: Datum Gesuch, Datum Entscheid, Verweis auf GEVER-Zugangsgeschaeft
  [lgraf]

- Fix issue with `prevent_deletion` subscriber not being able to acquire membership_tool